@@ -13,7 +13,7 @@
 \S4method{plot}{mi,ANY}(x, y, \dots)
 
 plot.mi(x, y, m = 1, vrb = NULL, vrb.name = "Variable Score",
-                    gray.scale = FALSE, mfrow=c( 1, 4 ), \dots )
+                    gray.scale = FALSE, mfrow=c( 1, 3 ), \dots )
 }
 \arguments{
   \item{x}{\code{mi} object generated by the mi function.}
