@@ -1,8 +1,9 @@
+2011-02-09 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
+   * DESCRIPTION (Version, Date): 0.09-12
+
 2011-02-08 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
    * DESCRIPTION (Version, Date): 0.09-11.06
    * R/plot: kill the residualplot
-
-
 
 2011-02-05 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
    * DESCRIPTION (Version, Date): 0.09-11.05
